# Semantic-Library-Search

./: .gitignore  BookDetails.qml  CMakeLists.txt  HomePage.qml  Main.qml  README  README.md  ResultModel.h  ResultsModel.cpp  SearchResults.qml  all_in_one.py  book.cpp  book.h  bookConversion.cpp  book_embeddings.faiss  book_loading.py  bookdto.h  books_dataset.csv  date.cpp  date.h  embedder_process.py  main.cpp  model_export.py  python_interface.py  searchController.cpp  searchController.h
GUI Files/: BookDetails.qml  CMakeLists.txt  CMakeLists.txt.user.3641a3c  HomePage.qml  Main.qml  RegisterSearch.cpp  ResultModel.h  ResultsModel.cpp  SearchResults.qml  SearchResults.qml.autosave  book.cpp  bookConversion.cpp  bookConversion.h  bookdto.h  books_dataset.csv  date.cpp  main.cpp  searchController.cpp  searchController.h
core/: SearchBridge.cpp  SearchBridge.h  SearchService.h
python/: all_in_one.py  cover_downloader.py  csv_generator.py  db_builder.py
